# microhelix-server

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  LICENSE  README.MD  build-linux.sh  version.txt
.circleci/: config.yml
cmake/Modules/: FindLibBSON.cmake  FindLibMongoC.cmake  FindLua.cmake
core/: CMakeLists.txt
core/config/: config.ini
core/include/: config_manager.h
core/src/: config_manager.cpp  main.cpp
docker/: Dockerfile  launch-microhelix.sh
docker-compile/: Dockerfile
network/: CMakeLists.txt
network/include/: network.h
network/src/: network.cpp
plugins/: CMakeLists.txt
plugins/mongodb/: CMakeLists.txt
plugins/mongodb/include/: json_utils.h  luamongo.h
plugins/mongodb/src/: json_utils.cpp  luamongo.cpp
plugins/ssl/: CMakeLists.txt
plugins/ssl/include/: luassl.h
plugins/ssl/src/: luassl.cpp
prebuilt/linux-64/libs/: libboost_context.so.1.61.0  libboost_coroutine.so.1.61.0  libboost_regex.so.1.61.0  libboost_system.so.1.61.0  libboost_thread.so.1.61.0  libbson-1.0.so.0  libbson-1.0.so.1  libcrypto.so.1.0.0  liblua.so.5.3  liblua5.3.so.0  libmongoc-1.0.so.0  libmongoc-1.0.so.1  libssl.so.1.0.0
sample_scripts/: service.lua
sample_scripts/lua/libs/: mongodb.lua
sample_scripts/scripts/: service.lua
sample_scripts/scripts/string/: GET.lua  POST.lua
scripting/: CMakeLists.txt
scripting/include/: http_helpers.h  script.h  scripting.h
scripting/sample_scripts/lua/libs/: mongodb.lua  ssl.lua  test.lua
scripting/sample_scripts/scripts/string/: DELETE.lua  PUT.lua
scripting/src/: http_helpers.cpp  script.cpp  scripting.cpp
